# churny

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  churny-wrapper.py  code-churn.sh  contributors.txt
src/: .clang-format  Makefile  churny  churny.c  churny.h  jdime.c  jdime.h  list.c  list.h  loc.c  loc.h  utils.c  utils.h
